gke/deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "openlang-deployment"
  namespace: "default"
  labels:
    app: "openlang-server"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "openlang-server"
  template:
    metadata:
      labels:
        app: "openlang-server"
    spec:
      containers:
      - name: "server-instance"
        image: "us-central1-docker.pkg.dev/endless-matter-387302/openlang/server:latest"
        volumeMounts:
          - name: service-account-credentials-volume
            mountPath: /etc/gcp
            readOnly: true
        ports:
          - containerPort: 5000
      volumes:
      - name: service-account-credentials-volume
        secret:
          secretName: my-data-service-account-credentials
          items:
          - key: sa_json
            path: sa_credentials.json
