gke/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openlang-service
spec:
  selector:
    app: openlang-server
  type: NodePort
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
